fix(queue): 상한에 붙기 전에 흔들 자리 확보
바닥이 상한에 붙으면 폭이 0 이 된다. 비율 0 은 끄겠다는 뜻이라 상한도 안
낮추고, 상한이 기본 간격과 같으면 그 아래로 안 내려간다.

Refs: CY-904